--- a/src/global.css
+++ b/src/global.css
@@ -15,7 +15,7 @@
 	--secondary-color: #d0dde9;
 	--tertiary-color: #edf0f8;
 	--accent-color: #bc380c;
-	--heading-color: rgba(255, 255, 255, 1);
+	--heading-color: rgb(233, 233, 233);
 	--text-color: #363636;
 	--section-head-color: #292929;
 	--background-color: #F8F8F8;
